--- a/src/main/resources/assets/aquamirae/lang/en_us.json
+++ b/src/main/resources/assets/aquamirae/lang/en_us.json
@@ -13,7 +13,7 @@
   "ability.aquamirae.enchanted_pouch_tier_3": "Your efforts have unlocked treasures more valuable than you expected. You only have a little time left and you will reach your final goal.\n\n{WHITE}When Activated:{GRAY} Reveals its contents and is consumed.",
   "ability.aquamirae.enchanted_pouch_tier_4": "You have reached the top! The enchanted pouch reveals its true contents. Your patience and courage have paid off, and now you can enjoy your well-deserved reward.\n\n{WHITE}When Activated:{GRAY} Reveals its contents and is consumed.",
   "ability.aquamirae.fin_cutter": "Deals <1> more damage for each empty heart you have (max <2>).",
-  "ability.aquamirae.poisoned_blade": "Poisons the target for <1>. Cooldown <CD1>.",
+  "ability.aquamirae.poisoned_blade": "Poisons the target for <1>. Cooldown <2>.",
   "ability.aquamirae.remnants_saber": "While in water, damage increases by <1>.",
   "ability.aquamirae.rune_of_the_storm": "Summons a storm chakram that accompanies you and deals <1> melee damage. Each instance of damage depletes <2> rune charges.",
   "ability.aquamirae.terrible_armor": "Inflicts poison on enemies for <1> when attacked.",
@@ -83,6 +83,7 @@
 
   "death.attack.crystallization": "%1$s has been turned into a crystal",
 
+  "effect.aquamirae.depths_fury": "Depth's Fury",
   "effect.aquamirae.hydrophobia": "Hydrophobia",
   "effect.aquamirae.abyss_blindness": "Blindness",
   "effect.aquamirae.abyss_blindness.desc": "Blinding Abyss armor effect. Decreases movement speed.",
@@ -123,8 +124,8 @@
   "filled_map.aquamirae.shelter": "§eIce Maze Shelter Map",
   "filled_map.aquamirae.ship": "§fIce Maze Ship Map",
 
-  "info.captain_spawn": "§d Ghost of Captain Cornelia was awakened!",
-  "info.captain_spawn_fail": "§c Nothing happened...",
+  "info.aquamirae.cornelia_awakened": "Ghost of Captain Cornelia was awakened!",
+  "info.aquamirae.nothing_happened": "Nothing happened...",
   "info.maze_mother_spawn": "§c You feel the vibrations under the ice...",
 
   "item.aquamirae.abyssal_amethyst": "Abyssal Amethyst",
@@ -194,6 +195,20 @@
   "item.aquamirae.treasure_pouch": "Treasure Pouch",
   "item.aquamirae.whisper_of_the_abyss": "Whisper of the Abyss",
   "item.aquamirae.wisteria_niveis": "Wisteria Niveis",
+  "item.aquamirae.terrible_upgrade_smithing_template": "Smithing Template",
+  "item.aquamirae.smithing_template.terrible_upgrade.applies_to": "Iron Armor",
+  "item.aquamirae.smithing_template.terrible_upgrade.ingredients": "Angler's Fang",
+  "item.aquamirae.smithing_template.terrible_upgrade.base_slot_description": "Add a piece of armor",
+  "item.aquamirae.smithing_template.terrible_upgrade.additions_slot_description": "Add Angler's Fang",
+  "item.aquamirae.abyssal_upgrade_smithing_template": "Smithing Template",
+  "item.aquamirae.smithing_template.abyssal_upgrade.applies_to": "Netherite Armor",
+  "item.aquamirae.smithing_template.abyssal_upgrade.ingredients": "Abyssal Amethyst",
+  "item.aquamirae.smithing_template.abyssal_upgrade.base_slot_description": "Add a piece of armor",
+  "item.aquamirae.smithing_template.abyssal_upgrade.additions_slot_description": "Add Abyssal Amethyst",
+  "item.aquamirae.pirate_cap": "Pirate Cap",
+  "item.aquamirae.pirate_tunic": "Pirate Tunic",
+  "item.aquamirae.pirate_pants": "Pirate Pants",
+  "item.aquamirae.pirate_boots": "Pirate Boots",
   "item.minecraft.lingering_potion.effect.potion_of_tenacity": "Lingering Potion of Tenacity",
   "item.minecraft.lingering_potion.effect.spectral_potion": "Lingering Spectral Potion",
   "item.minecraft.potion.effect.potion_of_tenacity": "Potion of Tenacity",
@@ -204,9 +219,15 @@
   "item.minecraft.tipped_arrow.effect.spectral_potion": "Arrow of Spectral Potion",
   "itemGroup.aquamirae": "Aquamirae",
 
+  "upgrade.aquamirae.terrible_upgrade": "Terrible Upgrade",
+  "upgrade.aquamirae.abyssal_upgrade": "Abyssal Upgrade",
+
+  "lore.aquamirae.common.summons_cornelia": "Summons Captain Cornelia.",
+  "lore.aquamirae.common.press_to_open": "Press RMB to open.",
+  "lore.aquamirae.common.can_contain": "Can Contain:",
   "lore.aquamirae.dagger_of_greed": "Can't be repaired or strengthened",
   "lore.aquamirae.dead_sea_curse": "Dead Sea Curse",
-  "lore.aquamirae.dead_sea_scroll": "{I}Press {U} to read. > §dUnknown effect",
+  "lore.aquamirae.dead_sea_scroll": "Unknown effect",
   "lore.aquamirae.frozen_key": "Opens a chest hidden in the depths of the Ice Maze.",
   "lore.aquamirae.golden_moth_in_a_jar": "Some treasures can have their own souls, not only devour others...",
   "lore.aquamirae.liquid_curse": "Hover over another item and right-click to suppress the {RED}Dead {RED}Sea {RED}Curse {GRAY}on it. Consumed.",
@@ -214,17 +235,19 @@
   "lore.aquamirae.luminescent_lamp": "Underwater light source.",
   "lore.aquamirae.material": "Material",
   "lore.aquamirae.oxygelium": "Can be placed.",
-  "lore.aquamirae.pirate_pouch": "{I}Press {U} to open. > Forgotten pirate clothes that smell like rotten oysters...",
+  "lore.aquamirae.pirate_pouch": "Forgotten pirate clothes that smell like rotten oysters...",
+  "lore.aquamirae.pirate_pouch.content": "- Pirate clothing\n- Accessories",
   "lore.aquamirae.poseidons_breakfast": "Food of the Sea Gods. > §9Fury X (3:00) > §9Rush V (3:00) > > §5When Consumed: > §9+100% Ability Power > §9+50% Cooldown Reduction",
   "lore.aquamirae.rune_of_the_storm": "{I}Press {U} to use. > Attaches to the sword in your off hand, increasing its damage in cold biomes by 33%.",
   "lore.aquamirae.sea_casserole": "Is it looking at me? > §9Rush II (1:30) > §9Strength (0:30) > > §5When Consumed: > §9+20% Cooldown Reduction > §9+3 Attack Damage",
   "lore.aquamirae.sea_stew": "The power of the sea in your stomach! > §9Fury III (2:00) > §9Strength (2:00) > > §5When Consumed: > §9+30% Ability Power > §9+3 Attack Damage",
-  "lore.aquamirae.shell_horn": "{B}§dSummons Captain Cornelia. > Can be used near water in an Ice Maze.",
+  "lore.aquamirae.shell_horn": "To summon Captain Cornelia, blow into the shell horn for at least 3 seconds near the water in the Ice Maze.",
   "lore.aquamirae.ship_graveyard_echo": "If you listen carefully, you can hear the horns of hundreds of ships lost in the Ice Maze...",
   "lore.aquamirae.terrible_sword": "The Eye watches your mistakes...",
-  "lore.aquamirae.treasure_pouch": "{I}Press {U} to open. > Once valuable loot, now worthless trinkets under the ice... May contain a Ship or Outpost map.",
+  "lore.aquamirae.treasure_pouch": "Once valuable loot, now worthless trinkets under the ice...",
+  "lore.aquamirae.treasure_pouch.content": "- Ship & Outpost Maps\n- Smithing Templates\n- Pirate clothing\n- Accessories",
   "lore.aquamirae.wisteria_niveis": "Even in the midst of an icy wasteland, a wonderful life can appear. Can be placed.",
-  "lore.aquamirae.ship_graveyard_ring": "When equipped, you have a 40% chance to ignore {DARK_AQUA}Hydrophobia{GRAY}. The bonus is cumulative.",
+  "lore.aquamirae.ship_graveyard_ring": "When equipped, you have a 40% chance to ignore {DARK_AQUA}Hydrophobia{GRAY}. The bonus is cumulative (max 80%).",
   "lore.aquamirae.dead_sea_ring": "When equipped, creatures can't inflict {RED}Dead {RED}Sea {RED}Curse {GRAY}upon you.",
   "lore.aquamirae.shoe_spikes": "When equipped, increases friction with slippery blocks.",
 
