--- a/src/main/resources/assets/aquamirae/lang/en_us.json
+++ b/src/main/resources/assets/aquamirae/lang/en_us.json
@@ -199,17 +199,17 @@
   "effect.aquamirae.abyss_blindness.description": "Blinding Abyss armor effect. Decreases movement speed.",
   "effect.aquamirae.abyss_blindness.desc": "Blinding Abyss armor effect. Decreases movement speed.",
   "effect.aquamirae.armor_decrease": "§cPerforation",
-  "effect.aquamirae.armor_decrease.description": "Whisper of the Abyss effect. Reduces armor value.",
-  "effect.aquamirae.armor_decrease.desc": "Whisper of the Abyss effect. Reduces armor value.",
+  "effect.aquamirae.armor_decrease.description": "Whisper of the Abyss effect. Reduces armor value by 10% per level, up to 5 levels.",
+  "effect.aquamirae.armor_decrease.desc": "Whisper of the Abyss effect. Reduces armor value by 10% per level, up to 5 levels.",
   "effect.aquamirae.crystallization": "§cCrystallization",
-  "effect.aquamirae.crystallization.description": "Blinding Abyss armor effect. You deal 80% less damage and die when the effect ends.",
-  "effect.aquamirae.crystallization.desc": "Blinding Abyss armor effect. You deal 80% less damage and die when the effect ends.",
+  "effect.aquamirae.crystallization.description": "Blinding Abyss armor effect. Lowers attack damage by 80% and speed by 40%.",
+  "effect.aquamirae.crystallization.desc": "Blinding Abyss armor effect. Lowers attack damage by 80% and speed by 40%.",
   "effect.aquamirae.health_decrease": "§cDivide",
-  "effect.aquamirae.health_decrease.description": "Divider effect. Reduces max health.",
-  "effect.aquamirae.health_decrease.desc": "Divider effect. Reduces max health.",
+  "effect.aquamirae.health_decrease.description": "Divider effect. Reduces max health by 5% per level, up to 10 levels.",
+  "effect.aquamirae.health_decrease.desc": "Divider effect. Reduces max health by 5% per level, up to 10 levels.",
   "effect.aquamirae.strong_armor": "Strong Armor",
-  "effect.aquamirae.strong_armor.description": "Blinding Abyss armor effect. Increases armor value.",
-  "effect.aquamirae.strong_armor.desc": "Blinding Abyss armor effect. Increases armor value.",
+  "effect.aquamirae.strong_armor.description": "Blinding Abyss armor effect. Increases armor value and armor toughness.",
+  "effect.aquamirae.strong_armor.desc": "Blinding Abyss armor effect. Increases armor value and armor toughness.",
   "effect.aquamirae.swim_speed": "Speed",
   "effect.aquamirae.swim_speed.description": "Terrible armor effect. Increases underwater movement speed.",
   "effect.aquamirae.swim_speed.desc": "Terrible armor effect. Increases underwater movement speed.",
